fix(risk): close audit findings — build, port/adapter split, post-commit cache, security context
Wave A risk module audit on 0e41a50 surfaced 13 deviations from the prompts. This
commit closes all of them while keeping every CI gate (spotless, coverage 80%/70%,
SpotBugs+PMD, OpenAPI emission) green.

Build / build correctness
- BlacklistCacheTest: wrap shared @BeforeEach stub with lenient() — 4 Mockito strict-
  mode errors → 0; full surefire run green
- pom.xml: drop hardcoded caffeine 3.1.8, let Spring Boot BOM (3.4.1) manage the
  version
- EvaluateTransactionUseCaseImpl: explicit UTF-8 on getBytes() for IP/phone UUID
  derivation (SpotBugs DM_DEFAULT_ENCODING)
- UuidListConverter: replace trim().isEmpty() with isBlank() (PMD InefficientEmpty
  StringCheck)
- application.yml (openapi profile): keep RedisAutoConfiguration on (Lettuce defers
  TCP, scrape never hits Redis) and force varchar enum DDL so H2 in PostgreSQL mode
  accepts the schema — restores the OpenAPI gate that 0e41a50 broke

Architecture (matches phase-1/ledger convention + ArchUnit rules)
- 12 use case impls renamed Default*UseCase → *UseCaseImpl, @Service → @UseCase,
  Lombok @RequiredArgsConstructor replaces hand-written constructors
- AdminRiskController split into port (interface, mapping annotations) + adapter
  (AdminRiskControllerImpl, @PreAuthorize per method, @RequestBody/@Valid/@Path
  Variable/@RequestParam on parameters)

Cache invalidation moves post-commit via domain events
- New events: RiskRuleChangedEvent (CREATED/UPDATED/DISABLED) and Blacklist
  EntryChangedEvent (ADDED/REMOVED) under com.shadhinpay.risk.events
- New listeners: CompiledRuleCacheListener + BlacklistCacheListener fire on
  @TransactionalEventListener(AFTER_COMMIT); fail-OPEN with error log because the
  evaluation path is already fail-CLOSED and BlacklistCache.scheduledHydrate +
  CompiledRuleCache.loadAll recover drift
- BlacklistCache.hydrate() now tolerates a Redis miss at @PostConstruct so the
  application ca